# moth-hamster-wheel

./: CMakeLists.txt  INSTALL  LICENSE  README.md  THANKS  cmake_install.cmake  confReader.hpp  dataEntry.cpp  dataEntry.hpp  example.csv  filePrinter.cpp  filePrinter.hpp  fileRead.cpp  fileRead.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  mothHamsterWheel  newParser.cpp  newParser.hpp  properties.conf  rawEntry.cpp  rawEntry.hpp
icons/: CREDITS
xlslib-lib/: libxls.la  libxls.so.2.0.3
